# scrapy-patchwright

./: .gitignore  README.md  pyproject.toml
scripts/: rename.ps1
src/scrapy_patchwright/: __init__.py  _utils.py  handler.py  headers.py  memusage.py  page.py
