[project]
name = "scrapy-patchwright"
version = "0.0.46"
description = "Patchright integration for scrapy."
license="Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "patchright~=1.58.0",
    "scrapy~=2.14.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
